precompiles/macro/tests/compile-fail/precompile/codec/output-dont-impl-codec.stderr
error[E0277]: the trait bound `String: Codec` is not satisfied
  --> tests/compile-fail/precompile/codec/output-dont-impl-codec.rs:28:46
   |
28 |     fn foo(test: &mut impl PrecompileHandle) -> EvmResult<String> {
   |                                                 ^^^^^^^^^^^^^^^^^ the trait `Codec` is not implemented for `String`
   |
   = note: `String` implements similarly named trait `parity_scale_codec::codec::Codec`, but not `Codec`
   = help: the following other types implement trait `Codec`:
             ()
             (TupleElement0, TupleElement1)
             (TupleElement0, TupleElement1, TupleElement2)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6)
             (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6, TupleElement7)
           and $N others
note: required by a bound in `encode_arguments`
  --> $WORKSPACE/precompiles/src/solidity/codec/mod.rs
   |
   | pub fn encode_arguments<T: Codec>(value: T) -> Vec<u8> {
   |                            ^^^^^ required by this bound in `encode_arguments`

warning: unused variable: `test`
  --> tests/compile-fail/precompile/codec/output-dont-impl-codec.rs:28:9
   |
28 |     fn foo(test: &mut impl PrecompileHandle) -> EvmResult<String> {
   |            ^^^^ help: if this is intentional, prefix it with an underscore: `_test`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
